size video Player

--- a/video-player/src/main/resources/static/index.html
+++ b/video-player/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<video id="videoElement" controls autoplay muted playsinline>
+<video width="700" height="600" id="videoElement" controls autoplay muted playsinline>
     <source src="videos/video1.mp4" id="mp4Source" type="video/mp4">
 </video>
 
